fix : login interface memberId -> user 필드 수정 login 파일 분리

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     "outDir": "dist",
     "baseUrl": "./src",
     "paths": {
-      "*": ["node_modules/*"]
-      // "../*": ["./*"]
+      "*": ["node_modules/*"],
+      "../*": ["./*"]
     }
   }
 }
