import 정리 : 추가 및 삭제

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "outDir": "dist",
+    "outDir": "./dist",
     "baseUrl": "./src",
     "paths": {
       "*": ["node_modules/*"],
