chore: swagger setting // package - swagger-autogen : 스웨거 자동 업데이트 - swagger-ui-express : 스웨거 ui
// tsconfig
- module: ES2020 -> preserve ES 모듈 구문을 그대로 유지 (Json type error로 변경 함)
- resolveJsonModule : TypeScript 컴파일러에서 josn 파일 모듈로 가져오게 함

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["src/**/*", "**/*.ts"],
+  "include": ["src/**/*", "**/*.ts", "src/swagger/swagger.ts"],
   "exclude": ["node_modules"],
   "ts-node": {
     "esm": true,
@@ -9,9 +9,10 @@
   "compilerOptions": {
     "strict": true,
     "target": "ES2020",
-    "module": "ES2020",
+    "module": "preserve",
     "moduleResolution": "Node",
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
