--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
         with:
-         node-version: '20'
+          node-version: '20'
 
       - name: Build Docker image
         run: docker build -t simpang:latest .
