--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v2
         with:
-          node-version: '20.x'
-          cache: npm
+          node-version: '20'
 
       - name: Setup SSH
         uses: webfactory/ssh-agent@v0.9.0
