--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,16 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t simpang:latest .
+          docker build --build-arg PORT=${{ secrets.PORT }} \
+                       --build-arg MONGODB_URI=${{ secrets.MONGODB_URI }} \
+                       --build-arg BE_URL=${{ secrets.BE_URL }} \
+                       --build-arg FE_URL=${{ secrets.FE_URL }} \
+                       --build-arg IMAGE_BB_API_KEY=${{ secrets.IMAGE_BB_API_KEY }} \
+                       --build-arg REST_API_KEY=${{ secrets.REST_API_KEY }} \
+                       --build-arg KAKAO_APP_KEY=${{ secrets.KAKAO_APP_KEY }} \
+                       --build-arg CLIENT_SECRET=${{ secrets.CLIENT_SECRET }} \
+                       --build-arg SECRET_KEY=${{ secrets.SECRET_KEY }} \
+                       -t simpang:latest .
           docker save simpang:latest > simpang.tar
 
       - name: Copy Docker image to Vultr server
