--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,6 @@ jobs:
         uses: webfactory/ssh-agent@v0.9.0
         with:
           ssh-private-key: ${{ secrets.VULTR_SSH_KEY }}
-          known_hosts: ${{ secrets.KNOWN_HOSTS }}
 
       - name: Build Docker image
         run: |
@@ -55,10 +54,15 @@ jobs:
         run: scp -r ./simpang.tar ${{ secrets.VULTR_USERNAME }}@${{ secrets.VULTR_HOST }}:/home/${{ secrets.VULTR_USERNAME }}/docker-images/
 
       - name: SSH into Vultr server and deploy Docker container
-        run: |
-          ssh ${{ secrets.VULTR_USERNAME }}@${{ secrets.VULTR_HOST }} << 'EOF'
-            docker load -i /home/${{ secrets.VULTR_USERNAME }}/docker-images/simpang.tar
-            docker stop simpang || true
-            docker rm simpang || true
-            docker run -d --name simpang -p 8080:80 simpang:latest
-          EOF
+        with:
+          host: ${{ secrets.HOST_DEV }}
+          username: ${{ secrets.VULTR_USERNAME }}
+          port: 22
+          key: ${{ secrets.VULTR_SSH_KEY }}
+          run: |
+            ssh ${{ secrets.VULTR_USERNAME }}@${{ secrets.VULTR_HOST }} << 'EOF'
+              docker load -i /home/${{ secrets.VULTR_USERNAME }}/docker-images/simpang.tar
+              docker stop simpang || true
+              docker rm simpang || true
+              docker run -d --name simpang -p 8080:80 simpang:latest
+            EOF
