--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
       KAKAO_APP_KEY: ${{secrets.KAKAO_APP_KEY}}
       CLIENT_SECRET: ${{secrets.CLIENT_SECRET}}
       SECRET_KEY: ${{secrets.SECRET_KEY}}
+      VULTR_HOST: ${{secrets.VULTR_HOST}}
 
     steps:
       - name: Checkout code
@@ -47,6 +48,7 @@ jobs:
                        --build-arg KAKAO_APP_KEY=${{ secrets.KAKAO_APP_KEY }} \
                        --build-arg CLIENT_SECRET=${{ secrets.CLIENT_SECRET }} \
                        --build-arg SECRET_KEY=${{ secrets.SECRET_KEY }} \
+                       --build-arg VULTR_HOST=${{ secrets.VULTR_HOST }} \
                        -t simpang:latest .
           docker save simpang:latest > simpang.tar
 
