--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,6 +67,6 @@ jobs:
             docker load -i /home/${{ secrets.VULTR_USERNAME }}/docker-images/simpang.tar
             docker stop simpang || true
             docker rm simpang || true
-            docker run -d --name simpang -p 8080:8080 simpang:latest
+            docker run -d --name simpang -p ${PORT}:${PORT} simpang:latest
             docker image prune -f
           EOF
