--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,6 +67,9 @@ jobs:
             docker load -i /home/${{ secrets.VULTR_USERNAME }}/docker-images/simpang.tar
             docker stop simpang || true
             docker rm simpang || true
-            docker run -d --name simpang -p 8080:${{ secrets.PORT }} simpang:latest
+            docker run -d --name simpang -p 8080:${{ secrets.PORT }} \
+              -v  ${{secrets.SSL_FULL_CERT_PATH}}:${{secrets.SSL_FULL_CERT_PATH}}:ro \
+              -v  ${{secrets.SSL_KEY_PATH}}:${{secrets.SSL_KEY_PATH}}:ro \
+            simpang:latest
             docker image prune -f
           EOF
