Dockerfile : ssl file copy 추가

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,6 +43,7 @@ jobs:
       - name: Build Docker images
         run: |
           docker build -t simpang:latest -f Dockerfile .
+          docker build -t nginx:latest -f Dockerfile.nginx .
 
       - name: Save Docker images
         run: |
