--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -27,6 +27,9 @@ services:
       - /etc/letsencrypt:/etc/letsencrypt:ro
 
   nginx:
+    build:
+    context: .
+    dockerfile: Dockerfile.nginx
     image: nginx:latest
     container_name: nginx
     ports:
@@ -34,6 +37,5 @@ services:
       - "80:80"
     volumes:
       - /etc/letsencrypt:/etc/letsencrypt:ro
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
     depends_on:
       - app
