--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,7 +54,7 @@ jobs:
         run: |
           ssh ${{ secrets.VULTR_USERNAME }}@${{ secrets.VULTR_HOST }} << 'EOF'
             docker load -i /home/${{ secrets.VULTR_USERNAME }}/docker-images/simpang.tar
-            cd /home/${{ secrets.VULTR_USERNAME }}/docker-images/
+            cd /home/${{ secrets.VULTR_USERNAME }}/
             docker-compose down || true
             docker-compose pull
             docker-compose up -d
