--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,20 +8,18 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:${PORT}"
+      - "8080:"${{secrets.PORT}}
     environment:
-      - PORT=${PORT}
-      - MONGODB_URI=${MONGODB_URI}
-      - BE_URL=${BE_URL}
-      - FE_URL=${FE_URL}
-      - IMAGE_BB_API_KEY=${IMAGE_BB_API_KEY}
-      - REST_API_KEY=${REST_API_KEY}
-      - KAKAO_APP_KEY=${KAKAO_APP_KEY}
-      - CLIENT_SECRET=${CLIENT_SECRET}
-      - SECRET_KEY=${SECRET_KEY}
-      - VULTR_HOST=${VULTR_HOST}
-      - SSL_CERT_PATH=${SSL_CERT_PATH}
-      - SSL_KEY_PATH=${SSL_KEY_PATH}
-      - SSL_FULL_CERT_PATH=${SSL_FULL_CERT_PATH}
-    # volumes:
-    #   - /etc/letsencrypt:/etc/letsencrypt:ro
+      PORT: ${{secrets.PORT}}
+      MONGODB_URI: ${{secrets.MONGODB_URI}}
+      BE_URL: ${{secrets.BE_URL}}
+      FE_URL: ${{secrets.FE_URL}}
+      IMAGE_BB_API_KEY: ${{secrets.IMAGE_BB_API_KEY}}
+      REST_API_KEY: ${{secrets.REST_API_KEY}}
+      KAKAO_APP_KEY: ${{secrets.KAKAO_APP_KEY}}
+      CLIENT_SECRET: ${{secrets.CLIENT_SECRET}}
+      SECRET_KEY: ${{secrets.SECRET_KEY}}
+      VULTR_HOST: ${{secrets.VULTR_HOST}}
+      SSL_CERT_PATH: ${{secrets.SSL_CERT_PATH}}
+      SSL_KEY_PATH: ${{secrets.SSL_KEY_PATH}}
+      SSL_FULL_CERT_PATH: ${{secrets.SSL_FULL_CERT_PATH}}
