--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:"${{secrets.PORT}}
+      - "8080:${{secrets.PORT}}"
     environment:
       PORT: ${{secrets.PORT}}
       MONGODB_URI: ${{secrets.MONGODB_URI}}
