env: 환경 변수 정리

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,8 @@ jobs:
       KAKAO_APP_KEY: ${{ secrets.KAKAO_APP_KEY }}
       CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
       SECRET_KEY: ${{ secrets.SECRET_KEY }}
-      VULTR_HOST: ${{ secrets.VULTR_HOST }}
+      FE_URL_DEV: ${{ secrets.FE_URL_DEV }}
+      FE_URL_LOCAL: ${{ secrets.FE_URL_LOCAL }}
 
     steps:
       - name: Checkout code
@@ -50,6 +51,8 @@ jobs:
             --build-arg CLIENT_SECRET=${{ secrets.CLIENT_SECRET }} \
             --build-arg SECRET_KEY=${{ secrets.SECRET_KEY }} \
             --build-arg VULTR_HOST=${{ secrets.VULTR_HOST }} \
+            --build-arg FE_URL_DEV=${{ secrets.FE_URL_DEV }} \
+            --build-arg FE_URL_DEV=${{ secrets.FE_URL_LOCAL }} \
             -t simpang:latest .
           docker save simpang:latest -o simpang.tar
 
